# krkn-service-hijacking

./: Dockerfile  README.md  app.py  models.py  pyproject.toml  utils.py
.github/workflows/: test.yaml
tests/: conftest.py
tests/functional/: test_plan.py
tests/testdata/: plan.yaml
